--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,18 @@
 {
   "name": "Zmanim App",
   "short_name": "Zmanim",
-  "start_url": "zman/index.html",
+  "start_url": "/zman/index.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "your-icon.png",
+      "src": "/zman/your-icon.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "your-icon.png",
+      "src": "/zman/your-icon.png",
       "sizes": "512x512",
       "type": "image/png"
     }
